[package]
name = "crusty-core"
version = "0.1.3"
authors = ["Sergey F. <let4be@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"
debug-assertions = false

[profile.release]
panic = "abort"
debug-assertions = false
opt-level = 3

[dependencies]
tracing-tools = {version = "~0.1.10", git = "https://github.com/let4be/tracing-tools", branch = "main"}
futures = "~0.3.13"
tokio = { version = "~1.5.0", features = ["full"] }
hyper = {version = "~0.14.7", features = ["full"] }
url = "~2.2.1"
select = "~0.5.0"
http = "~0.2.3"
bytes = "~1.0.1"
hyper-tls = "~0.5.0"
tracing = "~0.1.25"
flate2 = "~1.0.20"
humansize = "~1.1.0"
async-channel = "~1.6.1"
thiserror = "~1.0.24"
anyhow = "~1.0.40"
futures-util = "~0.3.14"
pin-project = "~1.0.7"
trust-dns-resolver = "~0.20.2"
lazy_static = "~1.4.0"
futures-lite = "~1.11.3"
serde = {version = "~1.0.125", features = ["derive"] }
serde_derive = "~1.0.125"
humanize-rs = "~0.1.5"