[package]
name = "crusty-core"
version = "0.1.104"
authors = ["Sergey F. <let4be@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"
debug-assertions = false

[profile.release]
panic = "abort"
debug-assertions = false
opt-level = 3

[dependencies]
tracing-tools = "~0.1.0"

async-channel = "~1.6.1"
futures-lite = "~1.11.3"
serde = {version = "~1.0.125", features = ["derive"] }
tokio = { version = "~1.5.0", features = ["rt", "rt-multi-thread", "io-util", "net", "time", "macros"] }
hyper = {version = "~0.14.7", features = ["http1", "http2", "client"] }

trust-dns-resolver = "~0.20.2"
hyper-tls = "~0.5.0"
url = "~2.2.1"
http = "~0.2.3"
bytes = "~1.0.1"
flate2 = "~1.0.20"
select = "~0.5.0"

humansize = "~1.1.0"
humanize-rs = "~0.1.5"
tracing = "~0.1.25"
thiserror = "~1.0.24"
anyhow = "~1.0.40"
pin-project = "~1.0.7"
lazy_static = "~1.4.0"
num_cpus = "~1.13.0"