[package]
name = "crusty-core"
version = "0.33.0"
authors = ["Sergey F. <let4be@gmail.com>"]
edition = "2018"
description = "Library for creating blazing fast and configurable web crawlers"
readme = "../README.md"
license = "GPL-3.0"
repository = "https://github.com/let4be/crusty-core"
keywords = ["crawler", "spider", "rust", "async", "multi-threaded"]

[dependencies]
tracing-tools = "~0.2.0"

flume = "~0.10.5"
futures-lite = "~1.12.0"
serde = {version = "~1.0.125", features = ["derive"] }
tokio = { version = "~1.6.0", features = ["rt", "rt-multi-thread", "io-util", "net", "time", "macros"] }
hyper = {version = "~0.14.7", features = ["http1", "http2", "client"] }
robotstxt-with-cache  = {version = "~0.4.0"}
#backoff = {version = "~0.3.0", features = ["tokio", "futures"] }

trust-dns-resolver = "~0.20.2"
hyper-tls = "~0.5.0"
url = "~2.2.1"
http = "~0.2.3"
bytes = "~1.0.1"
flate2 = "~1.0.20"
select = "~0.5.0"
ipnet = "~2.3.0"

humansize = "~1.1.0"
humanize-rs = "~0.1.5"
tracing = "~0.1.25"
thiserror = "~1.0.24"
anyhow = "~1.0.40"
pin-project = "~1.0.7"
lazy_static = "~1.4.0"
num_cpus = "~1.13.0"
rand = "~0.8.0"
