[package]
name = "crusty_find_duplicate_titles"
version = "0.1.0"
authors = ["Sergey F. <let4be@gmail.com>"]
edition = "2018"

[dependencies]
crusty-core = {path = "../.."}
tracing-subscriber = "~0.2.17"
tracing = "~0.1.25"
anyhow = "~1.0.40"
tokio = { version = "~1.5.0", features = ["rt", "rt-multi-thread", "io-util", "net", "time", "macros"] }
url = "~2.2.2"

[[bin]]
name = "crusty_find_duplicate_titles"
path = "src/main.rs"
