[package]
name = "crusty_find_duplicate_titles"
version = "0.1.0"
authors = ["Sergey F. <let4be@gmail.com>"]
edition = "2018"

[dependencies]
crusty-core = {path = "../.."}
anyhow = "~1.0.40"
tokio = { version = "~1.5.0", features = ["full"] }
url = "~2.2.2"

[[bin]]
name = "crusty_find_duplicate_titles"
path = "src/main.rs"
