[package]
name = "crusty_simple"
version = "0.1.0"
authors = ["Sergey F. <let4be@gmail.com>"]
edition = "2018"

[dependencies]
crusty-core = {path = "../../main" }
anyhow = "~1.0.40"
tokio = { version = "~1.7.0", features = ["rt", "rt-multi-thread", "io-util", "net", "time", "macros"] }
url = "~2.2.2"

[[bin]]
name = "crusty_simple"
path = "src/main.rs"
